--- a/lviv.html
+++ b/lviv.html
@@ -25,7 +25,6 @@
                 <li><a href="money.html">Банки</a></li>
                 <li><a href="lviv.html" class="active">Львов</a></li>
                 <li><a href="vaccinations.html">Вакцинация</a></li>
-                <li><a href="crisiscenter.html">БКЦ</a></li>
             </ul>
             <a class="navigation__home" href="index.html"><img src="img/logo2.jpg" alt="logo"
                     class="navigation__img"></a>
@@ -43,14 +42,12 @@
                     <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
                     <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
                     <li><a class="navigation-mobile__item" href="vaccinations.html">Вакцинация</a></li>
-                    <li><a class="navigation-mobile__item" href="crisiscenter.html">БКЦ</a></li>
                 </ul>
             </div>
         </div>
     </header>
     <section class="container about__section">
-        <h2>Полезная информация</h2>
-        <h1>про Львов</h1>
+        <h2>Полезная информация про Львов</h2>
         <div class="item">
             <div class="title">
                 <i class="fas fa-bus"></i>
@@ -179,34 +176,43 @@
             <h4>Самые популярные частные медицинские центры Львова</h4>
             <ul>
                 <li><span>Медцентр Св. Параскеви</span> - м. Львів, вул. Тернопільська, 21б;<br>
-                    вул. Заводська, 7;<br>
-                    проспект Червоної Калини, 64;<br>
-                    вул. Кульпарківська, 135.<br>
-                    <a href="https://www.medcenter.lviv.ua/" target="blank">medcenter.lviv.ua</a>
+                    <p>вул. Заводська, 7;<br>
+                        проспект Червоної Калини, 64;<br>
+                        вул. Кульпарківська, 135.<br>
+                        <a href="https://www.medcenter.lviv.ua/" target="blank">medcenter.lviv.ua</a>
+                    </p>                    
                 </li>
                 <li><span>Medicover</span> - ул. Антоновича, 102;<br>
-                    ул. Стрийская, 204; ул. проф. Ковалика.<br>
-                    <a href="https://medicover.ua/ru/" target="blank">medicover.ua</a>
+                    <p>ул. Стрийская, 204; ул. проф. Ковалика.<br>
+                        <a href="https://medicover.ua/ru/" target="blank">medicover.ua</a>
+                    </p>
                 </li>
                 <li><span>Лікарня ЕКСПЕРТ</span><br>
-                    +38 097 22 33 911<br>
-                    +38 073 22 33 911<br>
-                    вулиця Шолом Алейхема, 11<br>
-                    <a href="https://experthospital.com.ua/" target="blank">experthospital.com.ua</a>
+                    <p>
+                        +38 097 22 33 911<br>
+                        +38 073 22 33 911<br>
+                        вулиця Шолом Алейхема, 11<br>
+                        <a href="https://experthospital.com.ua/" target="blank">experthospital.com.ua</a>
+                    </p>
                 </li>
                 <li><span>Oxford medical</span> - пр. В. Черновола, 45А/9;<br>
-                    ул. Зубривская, 21.<br>
-                    <a href="https://lviv.oxford-med.com.ua" target="blank">lviv.oxford-med.com.ua</a>
-                <a href="https://www.medcenter.lviv.ua/" target="blank">medcenter.lviv.ua</a></li>
+                    <p>
+                        ул. Зубривская, 21.<br>
+                        <a href="https://lviv.oxford-med.com.ua" target="blank">lviv.oxford-med.com.ua</a>
+                    </p>
                 <li><span>Мережа стоматологій «Пародент»</span> - вул. Глибока, 4;<br>
-                    вул. Личаківська,52;<br>
-                    вул. Чайковського, 29;<br>
-                    вул. Шевченка, 87А.<br>
-                    <a href="https://parodent.com.ua/ru/" target="blank">parodent.com.ua</a>
+                    <p>
+                        вул. Личаківська,52;<br>
+                        вул. Чайковського, 29;<br>
+                        вул. Шевченка, 87А.<br>
+                        <a href="https://parodent.com.ua/ru/" target="blank">parodent.com.ua</a>
+                    </p>
                 </li>
                 <li><span>Мережа дитячих медичних центрів «Веселка»</span> - вул. Червоної Калини, 68;<br>
-                    вул. Щирецька, 36.<br>
-                    <a href="https://veselka.clinic/" target="blank">veselka.clinic/</a>
+                    <p>
+                        вул. Щирецька, 36.<br>
+                        <a href="https://veselka.clinic/" target="blank">veselka.clinic/</a>
+                    </p>
                 </li>
             </ul>
         </div>
