--- a/money.html
+++ b/money.html
@@ -25,7 +25,6 @@
                 <li><a href="money.html" class="active">Банки</a></li>
                 <li><a href="lviv.html">Львов</a></li>
                 <li><a href="vaccinations.html">Вакцинация</a></li>
-                <li><a href="crisiscenter.html">БКЦ</a></li>
             </ul>
             <a class="navigation__home" href="index.html"><img src="img/logo2.jpg" alt="logo"
                     class="navigation__img"></a>
@@ -43,25 +42,24 @@
                     <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
                     <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
                     <li><a class="navigation-mobile__item" href="vaccinations.html">Вакцинация</a></li>
-                    <li><a class="navigation-mobile__item" href="crisiscenter.html">БКЦ</a></li>
                 </ul>
             </div>
         </div>
     </header>
     <section class="container money__section">
-        <h1></h1>
         <h2>Открытие счета в украинском банке (выпуск карты)</h2>
         <h4>По опыту участников чата можно выпустить карту в <span>а-банке, Приватбанке, Райффайзен Банке и ПУМБ</span>.</h4>
         <p><span>Ограничение</span> - резиденты Украины не смогут сделать перевод со своей карты на карту нерезидента,
-             интернет банкинг обычно недоступен без ИНН.</p>
+            интернет банкинг обычно недоступен без ИНН.</p>
         <div class="links">
             <p>Нерезиденты могут оформить бесплатные карты в Альфа-Банке Украина – нужен только паспорт 
                 <a href="https://alfabank.ua/ru/about/press/nerezidenti-mozhut-oformiti-bezkoshtovni-karti-v-alfa-banku-2290" target="blank">alfabank.ua</a></p>
         </div>
 
-        <h3>Открытие счета в украинском банке (выпуск карты) по бел. паспорту</h3>
+        <h3>Открытие счета в украинском банке (выпуск карты) по бел. паспорту<br>
+            <span>Инструкция от Yuri</span></h3>
         <ul>
-            <li>Открытие валютной карты в Райффайзен банке (Yuri)
+            <li>Открытие валютной карты в Райффайзен банке
                 Спачатку сказалі, што не можна. 
                 Калі сказаў што у тэхнічнай падтрымкі адказалі што можна адчынілі.
                 Патрэбна:
@@ -79,7 +77,7 @@
         <h3>Открытие валютной карты в Райффайзен банке<br>
             <span>Инструкция от Yuri</span></h3>
         <p>Спачатку сказалі, што не можна. Калі сказаў што у тэхнічнай падтрымкі адказалі што можна адчынілі.</p>
-        <p>Патрэбна:</p>
+        <p><span>Патрэбна:</span></p>
         <ol>
             <li>Пашпарт</li>
             <li>Часовы від на жыхарства.(Посвідка на тимчасове проживання)<br>
