--- a/rent.html
+++ b/rent.html
@@ -25,7 +25,6 @@
         <li><a href="money.html">Банки</a></li>
         <li><a href="lviv.html">Львов</a></li>
         <li><a href="vaccinations.html">Вакцинация</a></li>
-        <li><a href="crisiscenter.html">БКЦ</a></li>
       </ul>
       <a class="navigation__home" href="index.html">
         <img src="img/logo2.jpg" alt="logo"
@@ -45,7 +44,6 @@
           <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
           <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
           <li><a class="navigation-mobile__item" href="vaccinations.html">Вакцинация</a></li>
-          <li><a class="navigation-mobile__item" href="crisiscenter.html">БКЦ</a></li>
         </ul>
       </div>
     </div>
@@ -57,7 +55,7 @@
         <div class="rent__item">
           <img class="rent__logo" src="./img/olx-logo-60h.png" alt="">
           <p class="rent__title">olx.ua</p>
-          <p class="rent__text">nedvizhimost/kvartiry-komnaty</p>
+          <p class="rent__text">nedv.../kvartiry-k...</p>
         </div>
       </a>
       <a class="rent__link" target="blank" href="https://www.real-estate.lviv.ua">
@@ -71,63 +69,63 @@
         <div class="rent__item">
           <img class="rent__logo" src="./img/tg-logo-60h.png" alt="">
           <p class="rent__title">Нерухомість Львів</p>
-          <p class="rent__text">t.me/neruhomist_lviv_ua</p>
+          <p class="rent__text">t.me/ner..._lviv_ua</p>
         </div>
       </a>
       <a class="rent__link" target="blank" href="https://t.me/orendakvartyrlviv">
         <div class="rent__item">
           <img class="rent__logo" src="./img/tg-logo-60h.png" alt="">
           <p class="rent__title">Оренда. Квартири. Кімнати. Львів.</p>
-          <p class="rent__text">t.me/orendakvartyrlviv</p>
+          <p class="rent__text">t.me/orendakv...</p>
         </div>
       </a>
       <a class="rent__link" target="blank" href=" https://www.facebook.com/groups/rent032/">
         <div class="rent__item">
           <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
           <p class="rent__title">Оренда У Львові БЕЗ маклерів!</p>
-          <p class="rent__text">facebook.com/groups/rent032</p>
+          <p class="rent__text">fb.com/gr.../rent032</p>
         </div>
       </a>
       <a class="rent__link" target="blank" href="https://www.facebook.com/groups/nomakler.lviv/">
         <div class="rent__item">
           <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
           <p class="rent__title">No makler - Львів</p>
-          <p class="rent__text">fb.com/gr/nomakler.lviv</p>
+          <p class="rent__text">fb.com/gr/nomakler...</p>
         </div>
       </a>
       <a class="rent__link" target="blank" href="https://www.facebook.com/groups/448598442160044">
         <div class="rent__item">
           <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
           <p class="rent__title">Оренда квартир Львів</p>
-          <p class="rent__text">fb.com/gr/448598442160044</p>
+          <p class="rent__text">fb.com/gr/448...</p>
         </div>
       </a>
       <a class="rent__link" target="blank" href="https://www.facebook.com/groups/realtyua">
         <div class="rent__item">
           <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
           <p class="rent__title">Нерухомість у Львові/</p>
-          <p class="rent__text">facebook.com/groups/realtyua</p>
+          <p class="rent__text">fb.com/gr.../realt...</p>
         </div>
       </a>
       <a class="rent__link" target="blank" href="https://www.facebook.com/groups/rentlvivnomakler">
         <div class="rent__item">
           <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
           <p class="rent__title">Оренда без маклера</p>
-          <p class="rent__text">fb.com/gr/rentlvivnomakler</p>
+          <p class="rent__text">fb.com/gr/rentlviv...</p>
         </div>
       </a>
       <a class="rent__link" target="blank" href="https://www.facebook.com/groups/HLorenda">
         <div class="rent__item">
           <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
           <p class="rent__title">оренда хат без маклєрят</p>
-          <p class="rent__text">facebook.com/groups/HLorenda</p>
+          <p class="rent__text">fb.com/gr.../HLorenda</p>
         </div>
       </a>
       <a class="rent__link" target="blank" href="https://www.facebook.com/groups/orendra">
         <div class="rent__item">
           <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
           <p class="rent__title">ОРЕНДА КВАРТИР ЛЬВІВ БЕЗ ПОСЕРЕДНИКІВ</p>
-          <p class="rent__text">facebook.com/groups/orendra</p>
+          <p class="rent__text">fb.com/gr.../orendra</p>
         </div>
       </a>
     </div>
