--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         <li><a href="money.html">Банки</a></li>
         <li><a href="lviv.html">Львов</a></li>
         <li><a href="vaccinations.html">Вакцинация</a></li>
-        <li><a href="crisiscenter.html">БКЦ</a></li>
       </ul>
       <a class="navigation__home" href="index.html"><img src="img/logo2.jpg" alt="logo"
               class="navigation__img"></a>
@@ -45,7 +44,6 @@
           <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
           <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
           <li><a class="navigation-mobile__item" href="vaccinations.html">Вакцинация</a></li>
-          <li><a class="navigation-mobile__item" href="crisiscenter.html">БКЦ</a></li>
         </ul>
       </div>
     </div>
@@ -63,9 +61,10 @@
               і ўкраінскай мовы<br>
               <span>ў Львове</span></h3>
               <p class="text">Кожную няделю<br>
-                <span>Беларуская а 15:00,<br>
-                  Українська в 16:00</span>
-                
+                <span>Беларуская<br>
+                  а 15:00<br>
+                  <br>
+                  Українська<br> в 16:00</span>
               </p>
           </div>
         </div>
