--- a/rent.html
+++ b/rent.html
@@ -60,71 +60,71 @@
       </a>
       <a class="rent__link" target="blank" href="https://www.real-estate.lviv.ua">
         <div class="rent__item">
-          <img class="rent__logo" src="./img/real-estate-logo-60h.png" alt="">
+          <i class="fas fa-home"></i>
           <p class="rent__title">real-estate.lviv.ua</p>
           <p class="rent__text"></p>
         </div>
       </a>
       <a class="rent__link" target="blank" href="https://t.me/neruhomist_lviv_ua">
         <div class="rent__item">
-          <img class="rent__logo" src="./img/tg-logo-60h.png" alt="">
+          <i class="fab fa-telegram"></i>
           <p class="rent__title">Нерухомість Львів</p>
           <p class="rent__text">t.me/ner..._lviv_ua</p>
         </div>
       </a>
       <a class="rent__link" target="blank" href="https://t.me/orendakvartyrlviv">
         <div class="rent__item">
-          <img class="rent__logo" src="./img/tg-logo-60h.png" alt="">
+          <i class="fab fa-telegram"></i>
           <p class="rent__title">Оренда. Квартири. Кімнати. Львів.</p>
           <p class="rent__text">t.me/orendakv...</p>
         </div>
       </a>
       <a class="rent__link" target="blank" href=" https://www.facebook.com/groups/rent032/">
         <div class="rent__item">
-          <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
+          <i class="fab fa-facebook-square"></i>
           <p class="rent__title">Оренда У Львові БЕЗ маклерів!</p>
           <p class="rent__text">fb.com/gr.../rent032</p>
         </div>
       </a>
       <a class="rent__link" target="blank" href="https://www.facebook.com/groups/nomakler.lviv/">
         <div class="rent__item">
-          <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
+          <i class="fab fa-facebook-square"></i>
           <p class="rent__title">No makler - Львів</p>
           <p class="rent__text">fb.com/gr/nomakler...</p>
         </div>
       </a>
       <a class="rent__link" target="blank" href="https://www.facebook.com/groups/448598442160044">
         <div class="rent__item">
-          <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
+          <i class="fab fa-facebook-square"></i>
           <p class="rent__title">Оренда квартир Львів</p>
           <p class="rent__text">fb.com/gr/448...</p>
         </div>
       </a>
       <a class="rent__link" target="blank" href="https://www.facebook.com/groups/realtyua">
         <div class="rent__item">
-          <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
+          <i class="fab fa-facebook-square"></i>
           <p class="rent__title">Нерухомість у Львові/</p>
           <p class="rent__text">fb.com/gr.../realt...</p>
         </div>
       </a>
       <a class="rent__link" target="blank" href="https://www.facebook.com/groups/rentlvivnomakler">
         <div class="rent__item">
-          <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
+          <i class="fab fa-facebook-square"></i>
           <p class="rent__title">Оренда без маклера</p>
           <p class="rent__text">fb.com/gr/rentlviv...</p>
         </div>
       </a>
       <a class="rent__link" target="blank" href="https://www.facebook.com/groups/HLorenda">
         <div class="rent__item">
-          <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
+          <i class="fab fa-facebook-square"></i>
           <p class="rent__title">оренда хат без маклєрят</p>
           <p class="rent__text">fb.com/gr.../HLorenda</p>
         </div>
       </a>
       <a class="rent__link" target="blank" href="https://www.facebook.com/groups/orendra">
         <div class="rent__item">
-          <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
-          <p class="rent__title">ОРЕНДА КВАРТИР ЛЬВІВ БЕЗ ПОСЕРЕДНИКІВ</p>
+          <i class="fab fa-facebook-square"></i>
+          <p class="rent__title">ОРЕНДА КВАРТИР ЛЬВІВ</p>
           <p class="rent__text">fb.com/gr.../orendra</p>
         </div>
       </a>
