--- a/entry.html
+++ b/entry.html
@@ -50,18 +50,18 @@
         <h2>Въезд в Украину</h2>
         <h3>Ознакомиться с актуальной информацией можно на сайте Минздрава Украины:</h3>
         <div class="links">
-            <a href="https://moz.gov.ua/" class="entry__link" target="blank"> https://moz.gov.ua/</a>
+            <a href="https://moz.gov.ua/" class="entry__link" target="blank"><i class="fas fa-link"></i> https://moz.gov.ua/</a>
         </div>
         <h4>Основная Информация для въезда в Украину:</h4>
         <div class="links">
-            <a href="https://visitukraine.today/ru" class="entry__link" target="blank">visitukraine.today</a>
+            <a href="https://visitukraine.today/ru" class="entry__link" target="blank"><i class="fas fa-link"></i>visitukraine.today</a>
             <a href="https://t.me/bel_ukr" class="entry__link" target="blank"><i class="fab fa-telegram"></i>BY_UA въезд-выезд, машины, отдых</a>
         </div>
         
         </div>
         <h3>Выезд из Беларуси через наземные пункты пропуска с временным ВНЖ</h3>
         <p>Временный вид на жительство в Украине не является причиной для выезда из Беларуси (только постоянный ВНЖ).</p>
-        <div class="links"><a href="https://drive.google.com/file/d/10m6Y4G6fI2WBo6Li9ipO729MdopkZetX/view?usp=sharing" target="blank">Официальный ответ ГПК</a></div>
+        <div class="links"><a href="https://drive.google.com/file/d/10m6Y4G6fI2WBo6Li9ipO729MdopkZetX/view?usp=sharing" target="blank"><i class="fas fa-link"></i> Официальный ответ ГПК</a></div>
         <h3>Основание: "Лечение"</h3>
         <h4>Для белорусских пограничников:</h4>
         <ol>
