--- a/legalisation.html
+++ b/legalisation.html
@@ -58,8 +58,10 @@
           <p class="legalisation__translate">Компаний, делающих нотариально заверенные переводы, в городе гораздо больше.<br>
             Здесь указаны примеры таких компаний в центре Львова, услугами которых уже неоднократно пользовались.</p>
             <ul>
-              <li>Галерея мов - вул. Дорошенка 31/34, <a href="http://halerea-mov.com.ua/"  target="blank">halerea-mov.com.ua</a></li>
-              <li>Рішельє - Проїзд Крива Липа 5 (бічна вулиці Дорошенка), офіс 1-А (2-ий поверх), <a href="http://rishelye.com.ua/contacts/"  target="blank">rishelye.com</a></li>
+              <li>Галерея мов - вул. Дорошенка 31/34<br>
+                <a href="http://halerea-mov.com.ua/" target="blank"><i class="fas fa-link"></i> halerea-mov.com.ua</a></li>
+              <li>Рішельє - Проїзд Крива Липа 5 (бічна вулиці Дорошенка), офіс 1-А (2-ий поверх)<br>
+                <a href="http://rishelye.com.ua/contacts/" target="blank"><i class="fas fa-link"></i> rishelye.com</a></li>
             </ul>
         </div>
         <br/>
@@ -68,7 +70,8 @@
         <label for="hd-2"><h3>Апостиль</h3></label>
         <div class="apostil">
           <h4>Необходимость апостилирования белорусских документов<br>
-            <span>Инструкция от пользователя Солидарность с белорусамиSeptember 01, 2020<a href="https://telegra.ph/Neobhodimost-apostilirovaniya-belorusskih-dokumentov-09-01">telegra.ph/Neobhodimost...</a></span></h4>
+            <span>Инструкция от пользователя Солидарность с белорусамиSeptember 01, 2020<br>
+              <a href="https://telegra.ph/Neobhodimost-apostilirovaniya-belorusskih-dokumentov-09-01"><i class="fab fa-telegram"></i> telegra.ph/Neobhodimost...</a></span></h4>
           <p class="legalisation__text">
             "Если бы у меня было хоть какое-то время, чтобы подготовиться к отъезду из Беларуси, я бы начала с
             апостилирования всех важных свидетельств и отдельных справок"</p>
@@ -121,28 +124,28 @@
       <div class="laws">
         <ol>
           <li>Деякі питання перебування в Україні громадян Республіки Білорусь<br>
-            <a href="https://www.kmu.gov.ua/npas/deyaki-pitannya-perebuvannya-v-ukrayini-gromadyan-respubliki-bilorus-i231220-1302" target="blank">kmu.gov.ua</a>
+            <i class="fas fa-link"></i> <a href="https://www.kmu.gov.ua/npas/deyaki-pitannya-perebuvannya-v-ukrayini-gromadyan-respubliki-bilorus-i231220-1302" target="blank">kmu.gov.ua</a>
           </li>
           <li>Деякі питання оформлення посвідок на тимчасове проживання громадянам Республіки Білорусь, які є підприємцями, висококваліфікованими спеціалістами, зокрема фахівцями у сфері інформаційних технологій та інновацій, гостра потреба в яких є відчутною для економіки України, та звернулися із заявою про надання дозволу на імміграцію, та членам їх сімей<br>
-            <a href="https://www.kmu.gov.ua/npas/deyaki-pitannya-oformlennya-posvidok-na-timchasove-prozhivannya-gromadyanam-respubliki-bilorus-yaki-ye-pidpriyemcyami-visokokvalifikovanimi-specialistami-i231220-1303" target="blank">kmu.gov.ua</a></li>
+            <i class="fas fa-link"></i> <a href="https://www.kmu.gov.ua/npas/deyaki-pitannya-oformlennya-posvidok-na-timchasove-prozhivannya-gromadyanam-respubliki-bilorus-yaki-ye-pidpriyemcyami-visokokvalifikovanimi-specialistami-i231220-1303" target="blank">kmu.gov.ua</a></li>
           </li>
           <li>Про встановлення квоти імміграції на 2021 рік<br>
-            <a href="https://www.kmu.gov.ua/npas/pro-vstanovlennya-kvoti-immigraciyi-na-2021-t240221" target="blank">kmu.gov.ua</a></li>
+            <i class="fas fa-link"></i> <a href="https://www.kmu.gov.ua/npas/pro-vstanovlennya-kvoti-immigraciyi-na-2021-t240221" target="blank">kmu.gov.ua</a></li>
           </li>
           <li>Оформлення дозволу на імміграцію<br>
-            <a href="https://dmsu.gov.ua/poslugi/dokumentuvannya-inozemcziv/oformlennya-dozvolu-na-immigracziyu.html" target="blank">dmsu.gov.ua</a></li>
+            <i class="fas fa-link"></i> <a href="https://dmsu.gov.ua/poslugi/dokumentuvannya-inozemcziv/oformlennya-dozvolu-na-immigracziyu.html" target="blank">dmsu.gov.ua</a></li>
           </li>
           <li>Набуття громадянства України за територіальним походженням<br>
-            <a href="https://dmsu.gov.ua/poslugi/nabuttya-gromadyanstva-ukrajni/nabuttya-gromadyanstva-ukrajni-za-teritorialnim-poxodzhennyam.html" target="blank">dmsu.gov.ua</a></li>
+            <i class="fas fa-link"></i> <a href="https://dmsu.gov.ua/poslugi/nabuttya-gromadyanstva-ukrajni/nabuttya-gromadyanstva-ukrajni-za-teritorialnim-poxodzhennyam.html" target="blank">dmsu.gov.ua</a></li>
           </li>
           <li>Набуття громадянства України за територіальним походженням<br>
-            <a href="https://zakon.rada.gov.ua/laws/show/2235-14#n92" target="blank">zakon.rada.gov.ua</a></li>
+            <i class="fas fa-link"></i> <a href="https://zakon.rada.gov.ua/laws/show/2235-14#n92" target="blank">zakon.rada.gov.ua</a></li>
           </li>
           <li>Квота імміграції<br>
-            <a href="https://zakon.rada.gov.ua/laws/show/2491-14#n23" target="blank">zakon.rada.gov.ua</a></li>
+            <i class="fas fa-link"></i> <a href="https://zakon.rada.gov.ua/laws/show/2491-14#n23" target="blank">zakon.rada.gov.ua</a></li>
           </li>
           <li>МІНЭКО. Перелік спеціальностей та вимог до кваліфікації спеціалістів на 2021<br>
-            <a href="https://thedigital.gov.ua/storage/uploads/files/page/quotas/%D0%9D%D0%B0%D0%BA%D0%B0%D0%B7%20%D0%BF%D0%BE%20%D0%BF%D1%80%D0%BE%D1%84%D0%B5%D1%81%D1%96%D1%8F%D0%BC%20%D0%BD%D0%BE%D0%B2%D0%B8%D0%B8%CC%86.pdf" target="blank">thedigital.gov.ua</a></li>
+            <i class="fas fa-link"></i> <a href="https://thedigital.gov.ua/storage/uploads/files/page/quotas/%D0%9D%D0%B0%D0%BA%D0%B0%D0%B7%20%D0%BF%D0%BE%20%D0%BF%D1%80%D0%BE%D1%84%D0%B5%D1%81%D1%96%D1%8F%D0%BC%20%D0%BD%D0%BE%D0%B2%D0%B8%D0%B8%CC%86.pdf" target="blank">thedigital.gov.ua</a></li>
           </li>
         </ol>
       </div>
@@ -152,7 +155,8 @@
       <label for="hd-4"><h3>Временный вид на жительство - Тимчасова посвiдка</h3></label>
       <div class="residence">
         <h5>Набор инструкций, советов и полезных ссылок по самостоятельному оформлению
-          документов в Украине (Временный ВНЖ, постоянный ВНЖ, ФОП) <a href="https://immigration2ukraine.org" target="blank">immigration2ukraine.org</a></h5>
+          документов в Украине (Временный ВНЖ, постоянный ВНЖ, ФОП)<br>
+          <a href="https://immigration2ukraine.org" target="blank"><i class="fas fa-link"></i> immigration2ukraine.org</a></h5>
 
         <h4>ВНЖ<br>
           <h6>Информация взята на канале @by_help_Kiev</span>
@@ -205,7 +209,7 @@
         </ul>
 
         <h4>ПРОДЛЕНИЕ ВНЖ / Продление пребывания в Украине</h4>
-        <h5>EnjoyProkonova. Продление пребывания в Украине <a href="https://www.youtube.com/watch?v=_JoUAdfqTrc&feature=youtu.be" target="blank">youtube.com</a></h5>
+        <h5>EnjoyProkonova. Продление пребывания в Украине <i class="fab fa-youtube"></i> <a href="https://www.youtube.com/watch?v=_JoUAdfqTrc&feature=youtu.be" target="blank">youtube.com</a></h5>
         
         <p class="legalisation__text">
           Продление ВНЖ осуществляется путем смены бланка ID-карты.<br>
@@ -277,13 +281,13 @@
           </li>
           <h4>Заключение психиатра во Львове - форма 122-2/о!</h4>
           <h4><span>Опыт пользователя @FrodoBagginsBel</span></h4>
-          <p class="legalisation__text">Нужную клинику помогли найти адвокаты (@conflictqueen), которые помогают нам с процессом подачи (за что им
+          <p class="legalisation__text">Нужную клинику помогли найти адвокаты (<i class="fab fa-telegram"></i> @conflictqueen), которые помогают нам с процессом подачи (за что им
               огромное спасибо!!!)<br>
               Клиника "Санолайф"
               Адрес: вулиця Тернопільська, 19, Львів, Львівська область, 79000
               068 775 7710<br>
               Там сделали и психиатра(150грн) и нарколога(200грн) сразу!<br>
-              С этими (и другими из списка) документами в областной поликлинике получили 028/о. (Спасибо @vikichocolate за
+              С этими (и другими из списка) документами в областной поликлинике получили 028/о. (Спасибо <i class="fab fa-telegram"></i> @vikichocolate за
               подсказку не стоять в очереди в регистратуру, а сразу идти в 22 кабинет в областной поликлинике!)</p>
 
           <li>Анализы крови, которые можно сделать в любом платном медцентре:<br>
@@ -401,7 +405,7 @@
       </div>
       <br/>
   <!-- 6 -->
-      <input class="hide" id="hd-6" type="checkbox">
+      <!-- <input class="hide" id="hd-6" type="checkbox">
       <label for="hd-6"><h3>Заключение психиатра во Львове - форма 122-2/о!</h3></label>
       <div class="apostil">
         <h4><span>Опыт пользователя @FrodoBagginsBel</span></h4>
@@ -415,7 +419,7 @@
         <p class="legalisation__text">С этими (и другими из списка) документами в областной поликлинике получили 028/о. (Спасибо @vikichocolate за
             подсказку не стоять в очереди в регистратуру, а сразу идти в 22 кабинет в областной поликлинике!)</p>
       </div>
-      <br/>
+      <br/> -->
   <!-- 7 -->
       <input class="hide" id="hd-7" type="checkbox">
       <label for="hd-7"><h3>Сроки временного пребывания нерастаможеного авто на территории Украины</h3></label>
@@ -448,9 +452,9 @@
       <div class="guides">
         <h5>Актуальное практическое руководство по переезду из Беларуси в Украину в 2021 году.<br>
           Написано под айтишников, но будет полезно к ознакомлению всем белорусам:
-          <a href="https://telegra.ph/Pereezd-ajtishnika-iz-Belarusi-v-Ukrainu-2021-01-13" target="blank">telegra.ph/Pereezd...</a>
+          <a href="https://telegra.ph/Pereezd-ajtishnika-iz-Belarusi-v-Ukrainu-2021-01-13" target="blank"><i class="fab fa-telegram"></i> telegra.ph/Pereezd...</a>
         </h5>
-        <h5>Как белорусским IT-специалистам переехать в Украину<a href=" https://belarustoukraine.com/"> https://belarustoukraine.com/</a></h5>
+        <h5>Как белорусским IT-специалистам переехать в Украину <a href=" https://belarustoukraine.com/"><i class="fas fa-link"></i>  https://belarustoukraine.com/</a></h5>
       </div>
 
     </div>
